# aerostack2

as2_behaviors/as2_behaviors_motion/: CMakeLists.txt  package.xml  plugins.xml
as2_behaviors/as2_behaviors_motion/go_to_behavior/plugins/: go_to_plugin_mpc_trajectory.cpp
as2_behaviors/as2_behaviors_universal_gripper/: CMakeLists.txt  README.md  package.xml
as2_behaviors/as2_behaviors_universal_gripper/ug_grasp_approach_behavior/: CMakeLists.txt
as2_behaviors/as2_behaviors_universal_gripper/ug_grasp_approach_behavior/config/: params.yaml
as2_behaviors/as2_behaviors_universal_gripper/ug_grasp_approach_behavior/include/ug_grasp_approach_behavior/: ug_grasp_approach_behavior.hpp
as2_behaviors/as2_behaviors_universal_gripper/ug_grasp_approach_behavior/launch/: ug_grasp_approach_behavior.py
as2_behaviors/as2_behaviors_universal_gripper/ug_grasp_approach_behavior/src/: ug_grasp_approach_behavior.cpp  ug_grasp_approach_behavior_node.cpp
as2_motion_controller/: CMakeLists.txt  package.xml  plugins.xml
as2_motion_controller/config/: motion_controller_default.yaml
as2_motion_controller/include/as2_motion_controller/: controller_handler.hpp
as2_motion_controller/plugins/astc_controller/config/: available_modes.yaml  controller_default.yaml
as2_motion_controller/src/: controller_handler.cpp
as2_motion_controller/tests/: plugin_test.cpp
as2_msgs/: CMakeLists.txt
as2_msgs/action/: UgGraspApproach.action
as2_msgs/msg/: ControllerDebug.msg  UgMpcFeedback.msg
as2_simulation_assets/as2_gazebo_classic_assets/scripts/: run_sitl.sh
(+6 files in other folders)
