<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>as2_behaviors_universal_gripper</name>
  <version>1.0.1</version>
  <description>Behaviors related to TRIGGER.</description>

  <maintainer email="p.kremer@uni.lu">Paul Kremer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>as2_core</depend>
  <depend>as2_msgs</depend>
  <depend>as2_behavior</depend>
  <depend>as2_motion_reference_handlers</depend>
  <depend>geometry_msgs</depend>
  <depend>ug_mpc</depend>

  <!-- linting test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

